--- a/style.css
+++ b/style.css
@@ -55,8 +55,21 @@ h2{
     margin-left: 5%;
     margin-right: 5%;
     padding-left: 20px;
-    box-shadow: 10px 10px 40px gray;
     border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+    
     
 }
-
+#wev-dev-experience{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue,cyan);
+    border-image-slice: 1 ;
+}
+#wev-div{
+    border-left: 7px solid;
+    border-image: linear-gradient(orange,blue);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
+}
